--- a/styles/_sign-up.scss
+++ b/styles/_sign-up.scss
@@ -3,6 +3,9 @@
 .sign-up {
     background-image: url(./../images/Mask\ \(2\).svg);
     background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    
 
     .sign-up__container {
         width: 1106px;
